# mcp-connect

./: .rules  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_LOG.md  PROJECT_MINDMAP.md  README.md  inspector.config.json  simple_proxy_test.rs  test_minimal_proxy.rs  test_request.json  test_response.rs
.zed/: debug.json  settings.json
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: auth.rs  client.rs  error.rs  lib.rs  types.rs
crates/mcp-client/src/transport/: http.rs  mod.rs  sse.rs  stdio.rs  tcp.rs
crates/mcp-connect/: Cargo.toml
crates/mcp-connect/src/: main.rs
crates/mcp-oauth/: Cargo.toml
crates/mcp-oauth/src/: browser.rs  callback_server.rs  client_registration.rs  coordination.rs  error.rs  lib.rs  oauth_client.rs  pkce.rs  token_manager.rs  types.rs
crates/mcp-proxy/: Cargo.toml
crates/mcp-proxy/src/: auth_proxy.rs  error.rs  lib.rs  proxy.rs  stdio_proxy.rs  strategy.rs
crates/mcp-remote/: Cargo.toml
crates/mcp-remote/src/: main.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: error.rs  lib.rs  oauth.rs  server.rs  types.rs
crates/mcp-server/src/transport/: mod.rs  stdio.rs
crates/mcp-types/: Cargo.toml
crates/mcp-types/src/: lib.rs
examples/: minimal_server_test.rs  simple_usage.md
scripts/: build-cross-platform.sh  build-release-simple.sh  build-release.sh  build-static.sh  generate-docs.sh
src/: main.rs
