[workspace]
members = [
    "mcp-types",
    "mcp-client",
    "mcp-server",
    "mcp-proxy",
    "mcp-remote"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
url = "2.0"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MCP Remote Team"]
license = "MIT"
