[workspace]
members = [
    "crates/mcp-types",
    "crates/mcp-client",
    "crates/mcp-server",
    "crates/mcp-oauth",
    "crates/mcp-proxy",
    "crates/mcp-remote"
]
resolver = "2"

[workspace.dependencies]
# Official MCP Rust SDK - primary dependency
rmcp = { version = "0.7.0", features = ["client", "server", "auth", "reqwest", "transport-streamable-http-client-reqwest", "transport-sse-client-reqwest", "transport-child-process", "transport-io"] }

# Core dependencies (some provided by rmcp, kept for clarity)
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# CLI and system dependencies not provided by rmcp
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"

# HTTP and futures (provided by rmcp but kept for transition)
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
url = "2.0"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MCP Remote Team"]
license = "MIT"
