[workspace]
members = [
    "crates/mcp-types",
    "crates/mcp-server",
    "crates/mcp-client",
    "crates/mcp-proxy",
    "crates/mcp-remote"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-core = "0.1"
rmcp = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
base64 = "0.21"
