[package]
name = "mcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Official rmcp SDK with client features
rmcp.workspace = true

# Additional dependencies not provided by rmcp
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
url.workspace = true
futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
eventsource-stream = "0.2"

# Internal dependencies
mcp-types = { path = "../mcp-types" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["http", "sse"]
http = []
sse = []
