[package]
name = "mcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Official rmcp SDK with client and transport features
rmcp.workspace = true

# Additional dependencies not provided by rmcp
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
url.workspace = true

# Re-export core dependencies that rmcp uses
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true

# Internal dependencies
mcp-types = { path = "../mcp-types" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["http", "sse"]
http = []
sse = []
