[package]
name = "mcp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-types = { path = "../mcp-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
rmcp = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"
oauth2 = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }
