[package]
name = "mcp-connect"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-connect"
path = "src/main.rs"

[dependencies]
mcp-types = { path = "../mcp-types" }
mcp-server = { path = "../mcp-server" }
mcp-client = { path = "../mcp-client" }
mcp-proxy = { path = "../mcp-proxy" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-core = { workspace = true }
futures = { workspace = true }
