[package]
name = "mcp-oauth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# OAuth 2.0 library
oauth2 = "4.4"

# URLs and UUIDs
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Logging
tracing = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform directories
dirs = "5.0"

# Secure storage
keyring = "2.0"

# Web server for callback
warp = "0.3"

# Base64 encoding/decoding
base64 = "0.21"

# Random generation
rand = "0.8"

# SHA256 hashing
sha2 = "0.10"

# Process management for browser launching
# Note: Using std::process::Command for cross-platform browser launching

[dev-dependencies]
tempfile = "3.0"
