[package]
name = "mcp-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rmcp.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
tokio.workspace = true
serde_json.workspace = true

mcp-types = { path = "../mcp-types" }

[features]
default = []
