[package]
name = "mcp-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Rakibul Yeasin <ryeasin03@gmail.com>"]

[dependencies]
mcp-types = { path = "../mcp-types" }
mcp-server = { path = "../mcp-server" }
mcp-client = { path = "../mcp-client" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
oauth2 = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
