[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
futures.workspace = true

mcp-types = { path = "../mcp-types" }

[features]
default = ["stdio"]
stdio = []
