[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Official rmcp SDK with server features
rmcp.workspace = true

# Additional dependencies not provided by rmcp
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Re-export core dependencies that rmcp uses
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# Internal dependencies
mcp-types = { path = "../mcp-types" }

[features]
default = ["stdio"]
stdio = []
