[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-types = { path = "../mcp-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
async-trait = { workspace = true }
